# noir-registry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  railway.toml
cli-tool/: .gitignore  Cargo.toml  README.md
cli-tool/src/: add.rs  auth.rs  config.rs  lib.rs  login.rs  main.rs  nargo_toml.rs  nargo_wrapper.rs  publish.rs  remove.rs  token.rs  utils.rs
frontend/: implementation_plan.md  next.config.ts  package-lock.json  package.json  preview.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: Footer.tsx  Header.tsx  Hero.tsx  PackageCard.tsx  PackageSearch.tsx  StatsSection.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/lib/: api.ts  types.ts
frontend/src/app/search/: page.tsx
research/: schema_v2.md
research/harvest/: analyze.py  fetch_github_discussions.py  fetch_github_issues.py  harvest_github_discussions.csv  harvest_github_issues.csv  pyproject.toml
scripts/: run_migrations.sh
server/: Cargo.toml
server/migrations/: 20251122235733_initial_schema.sql  20251126180340_fix_timestamp_types.sql  20260112093525_add_users_and_publishing.sql  20260112114837_fix_users_timestamps.sql  20260226214413_add_categories.sql  20260227122924_add_trigram_search_indexes.sql  20260708120000_add_v2_compat_and_alternatives.sql  20260722084920_drop_redundant_indexes.sql  20260722090459_drop_unused_category_tables.sql  20260722170000_add_api_tokens_table.sql  20260722170500_drop_users_api_key.sql
server/scripts/: backfill_primitives.sql  run_migrations.sh
server/src/: lib.rs  main.rs
server/src/auth/: mod.rs
server/src/db/: db.rs
server/src/github_metadata/: mod.rs
server/src/models/: mod.rs
server/src/package_storage/: mod.rs  retry.rs
server/src/rest_apis/: mod.rs
src/: lib.rs  main.rs
src/db/: db.rs
src/github_metadata/: mod.rs
src/models/: mod.rs
src/package_storage/: mod.rs  retry.rs
src/rest_apis/: mod.rs
testing_project/: Nargo.toml
