[package]
name = "noir_registry"
version = "0.1.0"
edition = "2024"
default-run = "noir_registry"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
